src/app/globals.css
@import 'tailwindcss';
@config '../../tailwind.config.ts';

:root {
  --foreground-rgb: 255, 255, 255;
  --background-start-rgb: 0, 0, 0;
  --background-end-rgb: 0, 0, 0;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

video {
  object-fit: cover;
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  opacity: 0.6;
}

@font-face {
  font-family: 'cyberspace-raceway-front';
  src: url('/Cyberspace-Raceway-Front.otf');
}

@font-face {
  font-family: 'cyberspace-raceway-back';
  src: url('/Cyberspace-Raceway-Back.otf');
}

@font-face {
  font-family: 'cyberspace-raceway-back';
  src: url('/Cyberspace-Raceway-Back.otf');
}

@font-face {
  font-family: 'pocket-calculator';
  src: url('/pocket_calcuatlor_ot.otf');
}

@font-face {
  font-family: 'pilot-command';
  src: url('/PilotCommand-3zn93.otf');
}

